Fix padding on small screens

--- a/kotti_website/static/css/kotti_website.css
+++ b/kotti_website/static/css/kotti_website.css
@@ -122,3 +122,28 @@ span.brand a, span.brand a:hover {
     border-radius: 0;
   }
 }
+
+@media (max-width: 980px) {
+  body, body.logged-in {
+    padding-top: 0px;
+  }
+  .subnav-fixed {
+    position: absolute;
+    top: 50px;
+    left: 0;
+    right: 0;
+    z-index: 1020; /* 10 less than .navbar-fixed to prevent any overlap */
+    border-color: #d5d5d5;
+    border-width: 0 0 1px; /* drop the border on the fixed edges */
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    -webkit-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+    -moz-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+    box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false); /* IE6-9 */
+  }
+
+}
+
+}
